--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "Nisharga",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
