--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,17 @@
       "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
  
     "rules": {
-      "@typescript-eslint/no-unused-vars": "error",
-      // to enforce using type for object type definitions, can be type or interface
-      "@typescript-eslint/consistent-type-definitions": ["error", "type"]
-    },
+        "no-unused-vars": "error",
+        "no-console":"warn",
+        "no-undef":"error",
+        "no-unused-expressions":"error",
+        "no-unreachable":"error",
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+      },
+
  
     "env": {
       "browser": true,
