--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "fix": "npm run lint -- --fix",
+    "prettier": "yarn prettier --write src/index.ts",
+    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "author": "Nisharga",
   "license": "ISC",
@@ -13,12 +17,17 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "dotenv": "^16.3.1",
+    "eslint-config-prettier": "^9.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
+    "prettier": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "cors": "^2.8.5",
+    "eslint": "^8.53.0"
   }
 }
