--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "cors": "^2.8.5",
-    "eslint": "^8.53.0"
+    "eslint": "^8.53.0",
+    "zod": "^3.22.4"
   }
 }
