--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "cors": "^2.8.5",
     "eslint": "^8.53.0",
+    "http-status": "^1.7.3",
     "zod": "^3.22.4"
   }
 }
